// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c6 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c5 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  margin: 0 auto;
  height: 60px;
}

.c4:before,
.c4:after {
  content: "";
  height: 1px;
  background-color: #DBDBDB;
  position: absolute;
  left: 0;
  right: 0;
}

.c4:before {
  top: 0;
}

.c4:after {
  bottom: 0;
}

.c2 {
  margin: 0px auto 30px;
  background-color: #FFFFFF;
}

.c2.tc-sticky {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
}

.c2.tc-sticky .c3:before,
.c2.tc-sticky .c3:after {
  display: none;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:767px) {
  .c4 {
    padding: 0 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<article>
  <Head />
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div>
      <div
        className="c2"
      >
        <div>
          <div
            className="c3 c4"
          >
            <SaveAndShareBar />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IS2"
    />
    <div
      className="c5 responsiveweb__BodyContainer-sc-1exejum-2 c5 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c6 responsiveweb__PrimaryImg-sc-16nqyj8-5 c6 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`2. a fullwidth image 1`] = `
.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c5 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  margin: 0 auto;
  height: 60px;
}

.c4:before,
.c4:after {
  content: "";
  height: 1px;
  background-color: #DBDBDB;
  position: absolute;
  left: 0;
  right: 0;
}

.c4:before {
  top: 0;
}

.c4:after {
  bottom: 0;
}

.c2 {
  margin: 0px auto 30px;
  background-color: #FFFFFF;
}

.c2.tc-sticky {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
}

.c2.tc-sticky .c3:before,
.c2.tc-sticky .c3:after {
  display: none;
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:767px) {
  .c4 {
    padding: 0 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<article>
  <Head />
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div>
      <div
        className="c2"
      >
        <div>
          <div
            className="c3 c4"
          >
            <SaveAndShareBar />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IS2"
    />
    <div
      className="c5 responsiveweb__BodyContainer-sc-1exejum-2 c5 css-view-1dbjc4n"
    >
      <div>
        <ArticleImage />
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`3. a secondary image 1`] = `
.c6 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c5 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  margin: 0 auto;
  height: 60px;
}

.c4:before,
.c4:after {
  content: "";
  height: 1px;
  background-color: #DBDBDB;
  position: absolute;
  left: 0;
  right: 0;
}

.c4:before {
  top: 0;
}

.c4:after {
  bottom: 0;
}

.c2 {
  margin: 0px auto 30px;
  background-color: #FFFFFF;
}

.c2.tc-sticky {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
}

.c2.tc-sticky .c3:before,
.c2.tc-sticky .c3:after {
  display: none;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:767px) {
  .c4 {
    padding: 0 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<article>
  <Head />
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div>
      <div
        className="c2"
      >
        <div>
          <div
            className="c3 c4"
          >
            <SaveAndShareBar />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IS2"
    />
    <div
      className="c5 responsiveweb__BodyContainer-sc-1exejum-2 c5 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c6 responsiveweb__SecondaryImg-sc-16nqyj8-6 c6 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`4. an inline image 1`] = `
.c6 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c5 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  margin: 0 auto;
  height: 60px;
}

.c4:before,
.c4:after {
  content: "";
  height: 1px;
  background-color: #DBDBDB;
  position: absolute;
  left: 0;
  right: 0;
}

.c4:before {
  top: 0;
}

.c4:after {
  bottom: 0;
}

.c2 {
  margin: 0px auto 30px;
  background-color: #FFFFFF;
}

.c2.tc-sticky {
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.3);
}

.c2.tc-sticky .c3:before,
.c2.tc-sticky .c3:after {
  display: none;
}

@media (min-width:768px) {
  .c6 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:767px) {
  .c4 {
    padding: 0 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<article>
  <Head />
  <div
    className="c0 responsiveweb__HeaderAdContainer-sc-1exejum-1 c0 css-view-1dbjc4n"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 responsiveweb__MainContainer-sc-1exejum-0 c1 css-view-1dbjc4n"
  >
    <div>
      <div
        className="c2"
      >
        <div>
          <div
            className="c3 c4"
          >
            <SaveAndShareBar />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IS2"
    />
    <div
      className="c5 responsiveweb__BodyContainer-sc-1exejum-2 c5 css-view-1dbjc4n"
    >
      <div>
        <div
          className="c6 responsiveweb__InlineImg-sc-16nqyj8-7 c6 css-view-1dbjc4n"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;
